# plc-cleaner

./: .gitmodules  CMakeLists.txt
src/: main.c
